--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,21 @@ body {
   font-family: 'Questrial', sans-serif;
   background-color: #667;
   display: flex;
-  flex-direction: column;
+  flex-direction: column;      
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  position: relative;  
   align-items: center;
   justify-content: center;
-  max-height: 100vh;
-  margin: 0;
+  border: 3px solid rgba(0, 208, 255, 0.435);
+  box-sizing: border-box;
+  
 }
 
 h1 {
-  color: #fff;
+  color: #3259a1;
 }
 
 .screen {
@@ -73,3 +79,24 @@ h1 {
     width: 90%;
   }
 }
+
+#video {  
+  max-width: 100%;
+  max-height: 100%;
+  border: 3px solid rgba(0, 149, 255, 0.548);
+  box-sizing: border-box;
+}
+
+#video:not(.notVirgin) {
+  animation: nat 5s infinite
+}
+
+@keyframes nat {
+  from { filter: hue-rotate(360deg); }
+  to { filter: hue-rotate(0deg); }
+}
+html {
+  width: 100%;
+  height: 100%;
+}
+
