--- a/css/style.css
+++ b/css/style.css
@@ -26,23 +26,23 @@ h1 {
 }
 
 .screen {
-  cursor: pointer;
-  width: 60%;
+  cursor: pointer;  
   background-color: #000 !important;
   border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border-top-right-radius: 10px;  
+	overflow: auto;
 }
 
 .controls {
   background: #333;
   color: #fff;
-  width: 60%;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px;
+  
 }
 
 .controls .btn {
